added know words to project dictonary

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,10 @@
 {
     "cSpell.words": [
+        "fa",
+        "hyannis",
         "minified",
+        "pinterest",
+        "scrollspy",
         "sidenav"
     ]
 }
