added word to VS Code dictonary

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "cSpell.words": [
         "fa",
         "hyannis",
+        "materialboxed",
         "minified",
         "pinterest",
         "scrollspy",
